--- a/recept/index.html
+++ b/recept/index.html
@@ -3,6 +3,7 @@
 <a href='After eight brownie.txt' >After eight brownie.txt</a><br>
 <a href='Aioli (2).txt' >Aioli (2).txt</a><br>
 <a href='Aioli.txt' >Aioli.txt</a><br>
+<a href='Allt på en plåt.txt' >Allt på en plåt.txt</a><br>
 <a href='Ananas på köttfärsbädd.txt' >Ananas på köttfärsbädd.txt</a><br>
 <a href='Ananaspaj.txt' >Ananaspaj.txt</a><br>
 <a href='Asiatisk köttfärssås med glasnudlar.txt' >Asiatisk köttfärssås med glasnudlar.txt</a><br>
@@ -37,12 +38,14 @@
 <a href='Blomkål och broccolisoppa.txt' >Blomkål och broccolisoppa.txt</a><br>
 <a href='Blomkålspilau.txt' >Blomkålspilau.txt</a><br>
 <a href='Blåbärscheesecake.txt' >Blåbärscheesecake.txt</a><br>
+<a href='Bowl med sötpotatis, kikärtor och fetaost.txt' >Bowl med sötpotatis, kikärtor och fetaost.txt</a><br>
 <a href='Breasola parmesan ruccola.txt' >Breasola parmesan ruccola.txt</a><br>
 <a href='Bresaola.txt' >Bresaola.txt</a><br>
 <a href='Brietårta.txt' >Brietårta.txt</a><br>
 <a href='Brigadeiro o toscasmet.txt' >Brigadeiro o toscasmet.txt</a><br>
 <a href='Broccoli och mascarpone lasagne.JPG' >Broccoli och mascarpone lasagne.JPG</a><br>
 <a href='Broccoli- och brieostpaj.txt' >Broccoli- och brieostpaj.txt</a><br>
+<a href='Broccolisoppa med grön curry.txt' >Broccolisoppa med grön curry.txt</a><br>
 <a href='Broccolisoppa.txt' >Broccolisoppa.txt</a><br>
 <a href='Brownie med kolatäcke.txt' >Brownie med kolatäcke.txt</a><br>
 <a href='Bruschetta.txt' >Bruschetta.txt</a><br>
@@ -98,13 +101,17 @@
 <a href='Citronglass hallon.txt' >Citronglass hallon.txt</a><br>
 <a href='Citronglass med lemoncurd.txt' >Citronglass med lemoncurd.txt</a><br>
 <a href='Citronkaka.txt' >Citronkaka.txt</a><br>
+<a href='Citronkladdkaka.txt' >Citronkladdkaka.txt</a><br>
+<a href='Cockie med chokladtryffel.txt' >Cockie med chokladtryffel.txt</a><br>
 <a href='Coleslaw.txt' >Coleslaw.txt</a><br>
+<a href='Cookies med vit choklad och lime.txt' >Cookies med vit choklad och lime.txt</a><br>
 <a href='Cordon bleu.html' >Cordon bleu.html</a><br>
 <a href='Couscoussallad.txt' >Couscoussallad.txt</a><br>
 <a href='Crabcakes med chiliaioli.txt' >Crabcakes med chiliaioli.txt</a><br>
 <a href='Curry med kokosmjölk o grillost.txt' >Curry med kokosmjölk o grillost.txt</a><br>
 <a href='Currygryta veggo med blomkålspilau.txt' >Currygryta veggo med blomkålspilau.txt</a><br>
 <a href='Currypasta med räkor.txt' >Currypasta med räkor.txt</a><br>
+<a href='Daim glass.txt' >Daim glass.txt</a><br>
 <a href='Dansk julsill.txt' >Dansk julsill.txt</a><br>
 <a href='Dillsås.txt' >Dillsås.txt</a><br>
 <a href='Dipsås till dumplings.txt' >Dipsås till dumplings.txt</a><br>
@@ -191,9 +198,11 @@
 <a href='Glaserade morötter.txt' >Glaserade morötter.txt</a><br>
 <a href='Gnocchi med gorgonzolasås och valnötter.txt' >Gnocchi med gorgonzolasås och valnötter.txt</a><br>
 <a href='Gnocchi med tomat o mozzarella.txt' >Gnocchi med tomat o mozzarella.txt</a><br>
+<a href='Gochujangmajonnäs.txt' >Gochujangmajonnäs.txt</a><br>
 <a href='Godaste fisksoppan.txt' >Godaste fisksoppan.txt</a><br>
 <a href='Godaste kladdkaka.txt' >Godaste kladdkaka.txt</a><br>
 <a href='Gorgonzola konjak sås.txt' >Gorgonzola konjak sås.txt</a><br>
+<a href='Gratinerad hummer med smak av sherry.txt' >Gratinerad hummer med smak av sherry.txt</a><br>
 <a href='Gratinerad hummer.txt' >Gratinerad hummer.txt</a><br>
 <a href='Gratinerad kassler med banan och jordnötter.txt' >Gratinerad kassler med banan och jordnötter.txt</a><br>
 <a href='Gratinerad kassler med zucchini.txt' >Gratinerad kassler med zucchini.txt</a><br>
@@ -217,6 +226,7 @@
 <a href='Grön linssoppa med ädelost.txt' >Grön linssoppa med ädelost.txt</a><br>
 <a href='Grön salamipasta.txt' >Grön salamipasta.txt</a><br>
 <a href='Grön vårsallad.txt' >Grön vårsallad.txt</a><br>
+<a href='Grönsakstaco med cashewkräm.txt' >Grönsakstaco med cashewkräm.txt</a><br>
 <a href='Grövre morotsbröd.txt' >Grövre morotsbröd.txt</a><br>
 <a href='Guacamole.txt' >Guacamole.txt</a><br>
 <a href='Gubbröra.htm' >Gubbröra.htm</a><br>
@@ -228,6 +238,7 @@
 <a href='Halloumi tacos.JPG' >Halloumi tacos.JPG</a><br>
 <a href='Halloumi tikka.txt' >Halloumi tikka.txt</a><br>
 <a href='Halloumi- och squashbiffar.txt' >Halloumi- och squashbiffar.txt</a><br>
+<a href='Halloumiburgare med BBQ-sås.txt' >Halloumiburgare med BBQ-sås.txt</a><br>
 <a href='Halloumistroganoff.txt' >Halloumistroganoff.txt</a><br>
 <a href='Halloumitacos med avokadokräm.txt' >Halloumitacos med avokadokräm.txt</a><br>
 <a href='Halstrad Lax Matsuhisadressing (3rd copy).txt' >Halstrad Lax Matsuhisadressing (3rd copy).txt</a><br>
@@ -258,6 +269,7 @@
 <a href='Indisk Currygryta.txt' >Indisk Currygryta.txt</a><br>
 <a href='Indisk gryta.txt' >Indisk gryta.txt</a><br>
 <a href='Indisk grönsakscurry.txt' >Indisk grönsakscurry.txt</a><br>
+<a href='Indisk linscurry med helbakade morötter.txt' >Indisk linscurry med helbakade morötter.txt</a><br>
 <a href='Indisk linsgryta (2).txt' >Indisk linsgryta (2).txt</a><br>
 <a href='Indisk linsgryta.txt' >Indisk linsgryta.txt</a><br>
 <a href='Indisk wrap med Paneer.txt' >Indisk wrap med Paneer.txt</a><br>
@@ -318,12 +330,17 @@
 <a href='Kolakakor med choklad.txt' >Kolakakor med choklad.txt</a><br>
 <a href='Kolakakor.txt' >Kolakakor.txt</a><br>
 <a href='Kolapaj.txt' >Kolapaj.txt</a><br>
+<a href='Koreanska vitlöksbröd.txt' >Koreanska vitlöksbröd.txt</a><br>
 <a href='Korv- och böngryta.txt' >Korv- och böngryta.txt</a><br>
 <a href='Korvrecept.txt' >Korvrecept.txt</a><br>
 <a href='Krispig brysselkål med ponzu.txt' >Krispig brysselkål med ponzu.txt</a><br>
+<a href='Krispig mosad potatis.txt' >Krispig mosad potatis.txt</a><br>
+<a href='Krispiga kikärtor med dipp.txt' >Krispiga kikärtor med dipp.txt</a><br>
+<a href='Krustader med cream cheese och mangochutney.txt' >Krustader med cream cheese och mangochutney.txt</a><br>
 <a href='Krydda till hamburgare.txt' >Krydda till hamburgare.txt</a><br>
 <a href='Kryddiga popcorn.txt' >Kryddiga popcorn.txt</a><br>
 <a href='Kryddsill.txt' >Kryddsill.txt</a><br>
+<a href='Kryddstekt kotlett.txt' >Kryddstekt kotlett.txt</a><br>
 <a href='Kräftpasta med getost och curry.txt' >Kräftpasta med getost och curry.txt</a><br>
 <a href='Kräftsoppa med mjukost.txt' >Kräftsoppa med mjukost.txt</a><br>
 <a href='Kräftstjärtsoppa.txt' >Kräftstjärtsoppa.txt</a><br>
@@ -333,6 +350,7 @@
 <a href='Krämig pasta med prosciutto och tomat.txt' >Krämig pasta med prosciutto och tomat.txt</a><br>
 <a href='Krämig spenat och chevrelasagne.txt' >Krämig spenat och chevrelasagne.txt</a><br>
 <a href='Krämiga burritos.txt' >Krämiga burritos.txt</a><br>
+<a href='Krämiga sesamnudlar med kinesisk broccoli.txt' >Krämiga sesamnudlar med kinesisk broccoli.txt</a><br>
 <a href='Kuvertbröd.txt' >Kuvertbröd.txt</a><br>
 <a href='Kyckling Tikka Masala.txt' >Kyckling Tikka Masala.txt</a><br>
 <a href='Kyckling curry.txt' >Kyckling curry.txt</a><br>
@@ -349,9 +367,11 @@
 <a href='Kycklingbullar i curryjordnötssås.txt' >Kycklingbullar i curryjordnötssås.txt</a><br>
 <a href='Kycklingfile i ugn.txt' >Kycklingfile i ugn.txt</a><br>
 <a href='Kycklingfile med tomat oliv.txt' >Kycklingfile med tomat oliv.txt</a><br>
+<a href='Kycklinggnocchi med gochujang o mozzarella.txt' >Kycklinggnocchi med gochujang o mozzarella.txt</a><br>
 <a href='Kycklinggryta enkel.txt' >Kycklinggryta enkel.txt</a><br>
 <a href='Kycklinggryta indisk.txt' >Kycklinggryta indisk.txt</a><br>
 <a href='Kycklinggryta med jordnötter.txt' >Kycklinggryta med jordnötter.txt</a><br>
+<a href='Kycklinggryta med lime och jordnötssmör.txt' >Kycklinggryta med lime och jordnötssmör.txt</a><br>
 <a href='Kycklinggryta med majs.txt' >Kycklinggryta med majs.txt</a><br>
 <a href='Kycklinggryta med parmesan och soltorkade tomater.txt' >Kycklinggryta med parmesan och soltorkade tomater.txt</a><br>
 <a href='Kycklinggryta med sojabönor.txt' >Kycklinggryta med sojabönor.txt</a><br>
@@ -362,6 +382,7 @@
 <a href='Kycklingparmigiana.txt' >Kycklingparmigiana.txt</a><br>
 <a href='Kycklingtacopaj.txt' >Kycklingtacopaj.txt</a><br>
 <a href='Kycklingwok.txt' >Kycklingwok.txt</a><br>
+<a href='Köttbullar med potatismos.txt' >Köttbullar med potatismos.txt</a><br>
 <a href='Köttbullar.txt' >Köttbullar.txt</a><br>
 <a href='Köttfärs chorizo.txt' >Köttfärs chorizo.txt</a><br>
 <a href='Köttfärs i lergryta.txt' >Köttfärs i lergryta.txt</a><br>
@@ -432,6 +453,7 @@
 <a href='Lyxiglaxkaka.htm' >Lyxiglaxkaka.htm</a><br>
 <a href='Långpannebröd.txt' >Långpannebröd.txt</a><br>
 <a href='Löjromsbomb.txt' >Löjromsbomb.txt</a><br>
+<a href='Löjromsflarn.txt' >Löjromsflarn.txt</a><br>
 <a href='Löjromsmousse.txt' >Löjromsmousse.txt</a><br>
 <a href='Löjromspizza.txt' >Löjromspizza.txt</a><br>
 <a href='Löjromssås.txt' >Löjromssås.txt</a><br>
@@ -521,6 +543,7 @@
 <a href='Parmainbakad marulk.txt' >Parmainbakad marulk.txt</a><br>
 <a href='Parmalindad chevre.txt' >Parmalindad chevre.txt</a><br>
 <a href='Parmarullar.txt' >Parmarullar.txt</a><br>
+<a href='Parmesanchips.txt' >Parmesanchips.txt</a><br>
 <a href='Parmesangratinerad torsk.txt' >Parmesangratinerad torsk.txt</a><br>
 <a href='Parmesangratinerad torskrygg med pressad potatis.txt' >Parmesangratinerad torskrygg med pressad potatis.txt</a><br>
 <a href='Parmesankräm.txt' >Parmesankräm.txt</a><br>
@@ -569,6 +592,7 @@
 <a href='Potatisrulle.txt' >Potatisrulle.txt</a><br>
 <a href='Potatissallad.txt' >Potatissallad.txt</a><br>
 <a href='Potatissoppa.txt' >Potatissoppa.txt</a><br>
+<a href='Potatistart med västerbottenost.txt' >Potatistart med västerbottenost.txt</a><br>
 <a href='Prostens pizza.txt' >Prostens pizza.txt</a><br>
 <a href='Påskbakelse med lax skaldjur och rom.txt' >Påskbakelse med lax skaldjur och rom.txt</a><br>
 <a href='Quesadillas med avokado och mozzarella.txt' >Quesadillas med avokado och mozzarella.txt</a><br>
@@ -579,6 +603,8 @@
 <a href='Renskavsgryta.txt' >Renskavsgryta.txt</a><br>
 <a href='Revbensspjäll, marinerade.txt' >Revbensspjäll, marinerade.txt</a><br>
 <a href='Romsås.txt' >Romsås.txt</a><br>
+<a href='Rosa ris.txt' >Rosa ris.txt</a><br>
+<a href='Rose spritz.txt' >Rose spritz.txt</a><br>
 <a href='Rostad Spetskål.txt' >Rostad Spetskål.txt</a><br>
 <a href='Rostade kaffebönor.txt' >Rostade kaffebönor.txt</a><br>
 <a href='Rostade kikärtor.txt' >Rostade kikärtor.txt</a><br>
@@ -593,6 +619,7 @@
 <a href='Räkfromage.txt' >Räkfromage.txt</a><br>
 <a href='Räkor med nudlar.txt' >Räkor med nudlar.txt</a><br>
 <a href='RäkorLimeChiliAvocadoröra.txt' >RäkorLimeChiliAvocadoröra.txt</a><br>
+<a href='Räksnittar.txt' >Räksnittar.txt</a><br>
 <a href='Räksoppa.html' >Räksoppa.html</a><br>
 <a href='Räktoast.txt' >Räktoast.txt</a><br>
 <a href='Råraka med räkor och löjrom.txt' >Råraka med räkor och löjrom.txt</a><br>
@@ -624,9 +651,12 @@
 <a href='Skink och ruccolarullar.txt' >Skink och ruccolarullar.txt</a><br>
 <a href='Skärgårdssill med stenbitsrom och dill.txt' >Skärgårdssill med stenbitsrom och dill.txt</a><br>
 <a href='Smördeg lax.txt' >Smördeg lax.txt</a><br>
+<a href='Smördeg med blåmögelost.txt' >Smördeg med blåmögelost.txt</a><br>
 <a href='SmördegsinbakadPotatis.txt' >SmördegsinbakadPotatis.txt</a><br>
+<a href='Smördegspuffar med löjrom.txt' >Smördegspuffar med löjrom.txt</a><br>
 <a href='Smörstekt torsk med champinjoner och bacon.txt' >Smörstekt torsk med champinjoner och bacon.txt</a><br>
 <a href='Smörstekta pilgrimsmusslor.txt' >Smörstekta pilgrimsmusslor.txt</a><br>
+<a href='Snabbpizza.txt' >Snabbpizza.txt</a><br>
 <a href='Snacks innehåll.xls' >Snacks innehåll.xls</a><br>
 <a href='Snickers typ.txt' >Snickers typ.txt</a><br>
 <a href='Sojabönscarbonara.txt' >Sojabönscarbonara.txt</a><br>
@@ -724,6 +754,7 @@
 <a href='Vegetariska köttbullar.txt' >Vegetariska köttbullar.txt</a><br>
 <a href='Vegobollar.txt' >Vegobollar.txt</a><br>
 <a href='Vegolasagne med morot och palsternacka.txt' >Vegolasagne med morot och palsternacka.txt</a><br>
+<a href='Vegolasagne.txt' >Vegolasagne.txt</a><br>
 <a href='Vinägrett.txt' >Vinägrett.txt</a><br>
 <a href='Vit chokladmousse.txt' >Vit chokladmousse.txt</a><br>
 <a href='Vit kladdkaka med hallon.txt' >Vit kladdkaka med hallon.txt</a><br>
